Fix calculator clipping on small screen sizes
Justify-content was causing the top of the calculator to be pushed off
screen on devices with less vertical screen space. This is rectified
using auto margins instead.

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;0,900;1,300&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;0,900;1,300&display=swap');
 
 * {
   box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   margin: 0;
   padding: 0;
 }
@@ -16,7 +16,7 @@ body {
   align-items: center;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  padding: 20px;
 }
 
 a {
@@ -50,11 +50,13 @@ main {
   background-color: #000;
   border-radius: 12px;
   margin-bottom: 32px;
+  margin-top: auto;
   padding: 12px 0;
 }
 
 footer {
   font-size: 1.25rem;
+  margin-bottom: auto;
   text-align: center;
 }
 
